--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <circle id="ud811Spinner" cx="16" cy="16" r="14" fill="none"></circle>
     </svg>
   </div>
-
+  <script src="./scripts/localforage.min.js"></script>
   <script src="./scripts/app.js"></script>    
 </body>
 </html>
